# CryptoOrderBook

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONCURRENCY.md  Main.cpp  OrderBook.h  PERFORMANCE.md  README.md  TODO.md  changelog.md
.cache/clangd/index/: Benchmarks.cpp.1BDC76C5ADFED75F.idx  CoinMarketCapFetcher.cpp.CC9005C20A66B4F5.idx  CoinMarketCapFetcher.h.DE10215084BFE5FA.idx  IPriceFetcher.h.451D2E6F3A43694B.idx  Main.cpp.39DE4C50CE7F2491.idx  MarketStats.cpp.3BCB3C33D7077374.idx  MarketStats.h.040E81F8F458B989.idx  MatchingEngine.cpp.A20527CC873082DC.idx  MatchingEngine.h.0B4C32C9D634ADD4.idx  MockTransactionLogger.cpp.55E6521C4D3A70C4.idx  MockTransactionLogger.h.CDC0A82857E2616C.idx  Order.cpp.223FF551B6C81DBE.idx  Order.h.3EF3C08F129DFA4C.idx  OrderBook.cpp.3A5CD2C8941157CE.idx  OrderBook.h.0349D9D35E2E4579.idx  PriceGenerator.cpp.9F45CAA4CB2CA6F2.idx  PriceGenerator.h.0B5498CE074664D3.idx  Simulator.cpp.97749056B77FBDCF.idx  Simulator.h.B6FE8C4D09C94EE5.idx  TestMarketStats.cpp.D39425640618D556.idx  TestMatchingEngine.cpp.BA8893F70CF2B0B2.idx  TestOrder.cpp.AEE5812C9F223284.idx  TestOrderBook.cpp.E415161F0DCEE4C3.idx  TestPriceGenerator.cpp.35E89AA189ED47EF.idx  TestSimulator.cpp.D81A3F0D6C9B1411.idx  TestTransactionLogger.cpp.66913D6B2A33F52E.idx  TestUtils.cpp.51597DB34E07CBA7.idx  TradeRecord.h.509C997993BB72BA.idx  TransactionLogger.cpp.E41B8B49CD87CCC7.idx  TransactionLogger.h.BD4770B99D65E00E.idx  TransactionLoggerInterface.h.97F426A30F559CB0.idx  Utils.cpp.EAA3FD788B246C1A.idx  Utils.h.DB8A88A701DFBE62.idx  dotenv.h.AF28C12F0AE28C74.idx
Database/: TransactionHistory.db
benchmarks/: Benchmarks.cpp
include/: CoinMarketCapFetcher.h  IPriceFetcher.h  MarketStats.h  MatchingEngine.h  MockTransactionLogger.h  Order.h  OrderBook.h  PriceGenerator.h  Simulator.h  TestTransactionLogger.h  TradeRecord.h  TransactionLogger.h  TransactionLoggerInterface.h  Utils.h
src/: CoinMarketCapFetcher.cpp  Main.cpp  MarketStats.cpp  MatchingEngine.cpp  MockTransactionLogger.cpp  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  PriceGenerator.cpp  Simulator.cpp  TransactionLogger.cpp  Utils.cpp
tests/: TestMarketStats.cpp  TestMatchingEngine.cpp  TestOrder.cpp  TestOrderBook.cpp  TestPriceGenerator.cpp  TestSimulator.cpp  TestTransactionLogger.cpp  TestUtils.cpp
